# Alien3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: scene.gltf
res/one_line/: license.txt  scene.gltf
res/scripts/: myScript.lua  script.py  test.py
res/scripts/lib/: alien2d.lua
res/shaders/: common.glsl.h  default_fragment.glsl  default_vertex.glsl  sprite_fragment.glsl  sprite_vertex.glsl
src/: Application.h  Base.hpp  main.cpp
src/adapter/: GLFWImguiAdapter.h
src/api/: LuaBridge.hpp  PythonBridge.cpp  PythonBridge.h
src/editor/: EditorWindow.cpp  EditorWindow.h
src/engine/: AssetImporter.h  Camera.h  Component.cpp  Component.h  DebugDraw.cpp  DebugDraw.h  GameObject.cpp  GameObject.h  Light.h  Mesh.h  Model.h  Physics2D.cpp  Physics2D.h  PhysicsBody.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  RenderQueue.h  SceneManager.cpp  SceneManager.h  Scripting.h  ShaderManager.h  Sprite.cpp  Sprite.h  SpriteAnimation.h  SpriteBatcher.cpp  SpriteBatcher.h  Transform.h  Vector.h  algorithm.h
src/gfx/: Buffer.h  GfxBase.cpp  GfxBase.h  Image.cpp  Image.h  Primitives.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  WorldCamera.h
src/utils/: File.h  FileDialogs.h  Helper.h  ShaderParser.h  Uuid.h
